# minicheck

./: LICENSE  README.md  minicheck.cabal  package.yaml  stack.yaml
app/: Main.hs
src/Test/: Generators.hs  Minicheck.hs
