cabal-version:      2.4
name:               minicheck
version:            0.1.0.0
synopsis:           Minimal implementation of PBT

-- A longer description of the package.
description:        Minimal implementation of QuickCheck-like PBT library

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pedro Vasconcelos
maintainer:         pbv@dcc.fc.up.pt

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

    
executable minicheck
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    containers, random, base ^>=4.16.4.0
    hs-source-dirs:   app, src
    default-language: Haskell2010
